Update README, gulpfile, package files, and tests

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "finaludacity",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write ."
-  },
+ "scripts": {
+  "gulp": "gulp",
+  "test": "npx mocha tests/**/*.test.js",
+  "test:cypress": "npx cypress run",
+  "cypress:open": "cypress open",
+  "format": "prettier --write ."
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,7 +23,7 @@
     "globals": "^16.1.0",
     "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
-    "gulp-shell": "^0.8.0",
+    "gulp-shell": "^0.6.3",
     "mocha": "^11.1.0",
     "parcel": "^2.14.4",
     "prettier": "^3.5.3"
