--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "finaludacity",
   "version": "1.0.0",
   "description": "",
- "scripts": {
-  "gulp": "gulp",
-  "test": "npx mocha tests/**/*.test.js",
-  "test:cypress": "npx cypress run",
-  "cypress:open": "cypress open",
-  "format": "prettier --write ."
-},
+  "scripts": {
+    "gulp": "gulp",
+    "test": "npx mocha tests/**/*.test.js",
+    "test:cypress": "npx cypress run",
+    "cypress:open": "cypress open",
+    "start": "parcel index.html",
+    "format": "prettier --write ."
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,7 +26,7 @@
     "gulp-cli": "^3.0.0",
     "gulp-shell": "^0.6.3",
     "mocha": "^11.1.0",
-    "parcel": "^2.14.4",
+    "parcel": "^2.15.1",
     "prettier": "^3.5.3"
   },
   "type": "module"
